--- a/src/main/resources/conf/messages.properties
+++ b/src/main/resources/conf/messages.properties
@@ -1,1 +1,10 @@
+label.login.empe_num=Employee Number
+label.login.pwd=Password
+
+button.login.login=Login
+button.login.reset=Reset
+
 NotEmpty.user.empe_num=Empe num can't be empty.
+Length.user.empe_num=Length must be between {0} and {1}
+NotEmpty.user.pwd=Password can't be empty.
+Length.user.pwd=Length must be between {0} and {1}
