--- a/src/main/resources/conf/messages_zh_CN.properties
+++ b/src/main/resources/conf/messages_zh_CN.properties
@@ -1,1 +1,10 @@
-NotEmpty.user.empe_num=#x8BF7;#x8F93;#x5165;empe num
+label.login.empe_num=\u5458\u5de5\u53f7
+label.login.pwd=\u767b\u5f55\u53e3\u4ee4
+
+button.login.login=\u767b\u5f55
+button.login.reset=\u91cd\u7f6e
+
+NotEmpty.user.empe_num=\u8bf7\u8f93\u5165\u5458\u5de5\u53f7
+Length.user.empe_num=\u957f\u5ea6\u5fc5\u987b\u5728{min}\u4e0e{max}\u4e4b\u95f4
+NotEmpty.user.pwd=\u8bf7\u8f93\u5165\u767b\u5f55\u53e3\u4ee4
+Length.user.pwd=\u957f\u5ea6\u5fc5\u987b\u5728{min}\u4e0e{max}\u4e4b\u95f4
