终于搞定了validator的参数传入/显示问题。 具体见README.txt中的第1段描述

--- a/src/main/resources/conf/messages_zh_CN.properties
+++ b/src/main/resources/conf/messages_zh_CN.properties
@@ -5,6 +5,7 @@ button.login.login=\u767b\u5f55
 button.login.reset=\u91cd\u7f6e
 
 NotEmpty.user.empe_num=\u8bf7\u8f93\u5165\u5458\u5de5\u53f7
-Length.user.empe_num=\u957f\u5ea6\u5fc5\u987b\u5728{min}\u4e0e{max}\u4e4b\u95f4
+#Length.user.empe_num=\u957f\u5ea6\u5fc5\u987b\u5728{min}\u4e0e{1}\u4e4b\u95f4
 NotEmpty.user.pwd=\u8bf7\u8f93\u5165\u767b\u5f55\u53e3\u4ee4
-Length.user.pwd=\u957f\u5ea6\u5fc5\u987b\u5728{min}\u4e0e{max}\u4e4b\u95f4
+#Length.user.pwd=\u957f\u5ea6\u5fc5\u987b\u5728{0}\u4e0e{1}\u4e4b\u95f4
+error.length=\u5185\u5bb9\u957f\u5ea6\u5fc5\u987b\u5728{min}\u4e0e{max}\u4e4b\u95f4
