--- a/src/main/resources/conf/messages.properties
+++ b/src/main/resources/conf/messages.properties
@@ -5,6 +5,7 @@ button.login.login=Login
 button.login.reset=Reset
 
 NotEmpty.user.empe_num=Empe num can't be empty.
-Length.user.empe_num=Length must be between {0} and {1}
+#Length.user.empe_num=Length must be between {0} and {1}
 NotEmpty.user.pwd=Password can't be empty.
-Length.user.pwd=Length must be between {0} and {1}
+#Length.user.pwd=Length must be between {0} and {1}
+error.length=Length must be between {min} and {max}
