在LoginController里做了validator的group的小例子； 在LoginController里做了编程验证的小例子；

--- a/src/main/resources/conf/messages.properties
+++ b/src/main/resources/conf/messages.properties
@@ -9,3 +9,5 @@ NotEmpty.user.empe_num=Empe num can't be empty.
 NotEmpty.user.pwd=Password can't be empty.
 #Length.user.pwd=Length must be between {0} and {1}
 error.length=Length must be between {min} and {max}
+reserved.user.empe_num=reserved empe num
+reserved.data=You input a reserved content :{0}
