--- a/src/main/resources/conf/messages_zh_CN.properties
+++ b/src/main/resources/conf/messages_zh_CN.properties
@@ -9,3 +9,5 @@ NotEmpty.user.empe_num=\u8bf7\u8f93\u5165\u5458\u5de5\u53f7
 NotEmpty.user.pwd=\u8bf7\u8f93\u5165\u767b\u5f55\u53e3\u4ee4
 #Length.user.pwd=\u957f\u5ea6\u5fc5\u987b\u5728{0}\u4e0e{1}\u4e4b\u95f4
 error.length=\u5185\u5bb9\u957f\u5ea6\u5fc5\u987b\u5728{min}\u4e0e{max}\u4e4b\u95f4
+reserved.user.empe_num=\u53d7\u9650\u5236\u7684\u7528\u6237\u540d
+reserved.data=\u4f60\u8f93\u5165\u4e86\u53d7\u9650\u5236\u7684\u5185\u5bb9\uff1a{0}
