初步写了一个tiles的baseLayout.jsp。资源文件中的消息也可以从tiles里传入到jsp中了（具体见baseLayout.jsp中的<title>那2行）。

--- a/src/main/resources/conf/messages.properties
+++ b/src/main/resources/conf/messages.properties
@@ -1,6 +1,8 @@
 label.login.empe_num=Employee Number
 label.login.pwd=Password
 
+title.main=Main Menu
+
 button.login.login=Login
 button.login.reset=Reset
 
