--- a/src/main/resources/conf/messages_zh_CN.properties
+++ b/src/main/resources/conf/messages_zh_CN.properties
@@ -1,6 +1,8 @@
 label.login.empe_num=\u5458\u5de5\u53f7
 label.login.pwd=\u767b\u5f55\u53e3\u4ee4
 
+title.main=\u4E3B\u83DC\u5355
+
 button.login.login=\u767b\u5f55
 button.login.reset=\u91cd\u7f6e
 
