改写了loginController中对用户名密码错误的处理方式，现在采用了spring mvc的方式了

--- a/src/main/resources/conf/messages.properties
+++ b/src/main/resources/conf/messages.properties
@@ -13,3 +13,4 @@ NotEmpty.user.pwd=Password can't be empty.
 error.length=Length must be between {min} and {max}
 reserved.user.empe_num=reserved empe num
 reserved.data=You input a reserved content :{0}
+error.login.user_pwd_error=EmpeNum or password is error.
