--- a/src/main/resources/conf/messages_zh_CN.properties
+++ b/src/main/resources/conf/messages_zh_CN.properties
@@ -13,3 +13,4 @@ NotEmpty.user.pwd=\u8bf7\u8f93\u5165\u767b\u5f55\u53e3\u4ee4
 error.length=\u5185\u5bb9\u957f\u5ea6\u5fc5\u987b\u5728{min}\u4e0e{max}\u4e4b\u95f4
 reserved.user.empe_num=\u53d7\u9650\u5236\u7684\u7528\u6237\u540d
 reserved.data=\u4f60\u8f93\u5165\u4e86\u53d7\u9650\u5236\u7684\u5185\u5bb9\uff1a{0}
+error.login.user_pwd_error=\u7528\u6237\u540D\u5BC6\u7801\u9519\u8BEF
