--- a/src/main/resources/conf/messages_zh_CN.properties
+++ b/src/main/resources/conf/messages_zh_CN.properties
@@ -1,7 +1,9 @@
+label.system.name=\u8282\u65e5\u5b89\u6392\u52a9\u624b
 label.login.empe_num=\u5458\u5de5\u53f7
 label.login.pwd=\u767b\u5f55\u53e3\u4ee4
 
-title.main=\u4E3B\u83DC\u5355
+
+title.main=\u4e3b\u83dc\u5355
 
 button.login.login=\u767b\u5f55
 button.login.reset=\u91cd\u7f6e
@@ -13,4 +15,4 @@ NotEmpty.user.pwd=\u8bf7\u8f93\u5165\u767b\u5f55\u53e3\u4ee4
 error.length=\u5185\u5bb9\u957f\u5ea6\u5fc5\u987b\u5728{min}\u4e0e{max}\u4e4b\u95f4
 reserved.user.empe_num=\u53d7\u9650\u5236\u7684\u7528\u6237\u540d
 reserved.data=\u4f60\u8f93\u5165\u4e86\u53d7\u9650\u5236\u7684\u5185\u5bb9\uff1a{0}
-error.login.user_pwd_error=\u7528\u6237\u540D\u5BC6\u7801\u9519\u8BEF
+error.login.user_pwd_error=\u7528\u6237\u540d\u5bc6\u7801\u9519\u8bef
