--- a/src/main/resources/conf/messages.properties
+++ b/src/main/resources/conf/messages.properties
@@ -1,6 +1,14 @@
 label.system.name=Holiday Assistant
 label.login.empe_num=Employee Number
 label.login.pwd=Password
+label.welcome=Welcome, 
+label.logout=Logout
+
+menu.maintain=Base Information Maintain
+menu.maintain.empe_info=Employee Information
+menu.maintain.holiday_info=Holiday Information
+menu.maintain.attendance_status_info=Attendance Status Information
+menu.attendance=Attendance Information
 
 title.main=Main Menu
 
