初步完成了考勤状态查询页面，还需要进一步完善： 增加按钮功能，细化content部分的tiles。

--- a/src/main/resources/conf/messages.properties
+++ b/src/main/resources/conf/messages.properties
@@ -1,9 +1,3 @@
-label.system.name=Holiday Assistant
-label.login.empe_num=Employee Number
-label.login.pwd=Password
-label.welcome=Welcome, 
-label.logout=Logout
-
 menu.maintain=Base Information Maintain
 menu.maintain.empe_info=Employee Information
 menu.maintain.holiday_info=Holiday Information
@@ -11,6 +5,16 @@ menu.maintain.attendance_status_info=Attendance Status Information
 menu.attendance=Attendance Information
 
 title.main=Main Menu
+title.maintain.atdnc_sts_list=Attendance Information Maintain
+
+page.header.atdnc_sts_list=Attendance Information Maintain
+
+label.system.name=Holiday Assistant
+label.login.empe_num=Employee Number
+label.login.pwd=Password
+label.welcome=Welcome, 
+label.logout=Logout
+label.attendance.status.name=Attendance Status
 
 button.login.login=Login
 button.login.reset=Reset
