--- a/src/main/resources/conf/messages_zh_CN.properties
+++ b/src/main/resources/conf/messages_zh_CN.properties
@@ -1,16 +1,21 @@
+menu.maintain=\u57fa\u7840\u4fe1\u606f\u7ef4\u62a4
+menu.maintain.empe_info=\u5458\u5de5\u4fe1\u606f
+menu.maintain.holiday_info=\u5047\u65e5\u4fe1\u606f
+menu.maintain.attendance_status_info=\u51fa\u52e4\u72b6\u6001\u4fe1\u606f
+menu.attendance=\u51fa\u52e4\u4fe1\u606f
+
+title.main=\u4e3b\u83dc\u5355
+title.maintain.atdnc_sts_list=\u51fa\u52e4\u72b6\u6001\u7ef4\u62a4
+
+page.header.atdnc_sts_list=\u51fa\u52e4\u72b6\u6001\u7ef4\u62a4
+
 label.system.name=\u8282\u65e5\u5b89\u6392\u52a9\u624b
 label.login.empe_num=\u5458\u5de5\u53f7
 label.login.pwd=\u767b\u5f55\u53e3\u4ee4
-label.welcome=\u6B22\u8FCE\uFF0C 
-label.logout=\u767B\u51FA 
+label.welcome=\u6b22\u8fce\uff0c 
+label.logout=\u767b\u51fa 
+label.attendance.status.name=\u51fa\u52e4\u72b6\u6001
 
-menu.maintain=\u57FA\u7840\u4FE1\u606F\u7EF4\u62A4
-menu.maintain.empe_info=\u5458\u5DE5\u4FE1\u606F
-menu.maintain.holiday_info=\u5047\u65E5\u4FE1\u606F
-menu.maintain.attendance_status_info=\u51FA\u52E4\u72B6\u6001\u4FE1\u606F
-menu.attendance=\u51FA\u52E4\u4FE1\u606F
-
-title.main=\u4e3b\u83dc\u5355
 
 button.login.login=\u767b\u5f55
 button.login.reset=\u91cd\u7f6e
