完成了“考勤状态信息”页面的查询/新增/修改/删除功能。 下面就需要开始微调tiles，争取形成一个统一的风格。

--- a/src/main/resources/conf/messages.properties
+++ b/src/main/resources/conf/messages.properties
@@ -18,12 +18,20 @@ label.attendance.status.name=Attendance Status
 
 button.login.login=Login
 button.login.reset=Reset
+button.modify=Modify
+button.create=Create
+button.delete=Delete
+button.register=Save
+button.back=Back
 
 NotEmpty.user.empe_num=Empe num can't be empty.
 #Length.user.empe_num=Length must be between {0} and {1}
 NotEmpty.user.pwd=Password can't be empty.
 #Length.user.pwd=Length must be between {0} and {1}
+NotEmpty=may not be empty.
 error.length=Length must be between {min} and {max}
 reserved.user.empe_num=reserved empe num
 reserved.data=You input a reserved content :{0}
 error.login.user_pwd_error=EmpeNum or password is error.
+error.need.select.one=Please select one data.
+error.cant.select.more.than.one=You couldn't select more than one.
