--- a/src/main/resources/conf/messages_zh_CN.properties
+++ b/src/main/resources/conf/messages_zh_CN.properties
@@ -6,8 +6,10 @@ menu.attendance=\u51fa\u52e4\u4fe1\u606f
 
 title.main=\u4e3b\u83dc\u5355
 title.maintain.atdnc_sts_list=\u51fa\u52e4\u72b6\u6001\u7ef4\u62a4
+title.maintain.atdnc_sts_info=\u51fa\u52e4\u72b6\u6001
 
 page.header.atdnc_sts_list=\u51fa\u52e4\u72b6\u6001\u7ef4\u62a4
+page.header.atdnc_sts_info=\u51fa\u52e4\u72b6\u6001
 
 label.system.name=\u8282\u65e5\u5b89\u6392\u52a9\u624b
 label.login.empe_num=\u5458\u5de5\u53f7
@@ -19,12 +21,20 @@ label.attendance.status.name=\u51fa\u52e4\u72b6\u6001
 
 button.login.login=\u767b\u5f55
 button.login.reset=\u91cd\u7f6e
+button.modify=\u4fee\u6539
+button.create=\u65b0\u589e
+button.delete=\u5220\u9664
+button.register=\u4fdd\u5b58
+button.back=\u8fd4\u56de
 
 NotEmpty.user.empe_num=\u8bf7\u8f93\u5165\u5458\u5de5\u53f7
 #Length.user.empe_num=\u957f\u5ea6\u5fc5\u987b\u5728{min}\u4e0e{1}\u4e4b\u95f4
 NotEmpty.user.pwd=\u8bf7\u8f93\u5165\u767b\u5f55\u53e3\u4ee4
 #Length.user.pwd=\u957f\u5ea6\u5fc5\u987b\u5728{0}\u4e0e{1}\u4e4b\u95f4
+NotEmpty=\u4e0d\u53ef\u4e3a\u7a7a
 error.length=\u5185\u5bb9\u957f\u5ea6\u5fc5\u987b\u5728{min}\u4e0e{max}\u4e4b\u95f4
 reserved.user.empe_num=\u53d7\u9650\u5236\u7684\u7528\u6237\u540d
 reserved.data=\u4f60\u8f93\u5165\u4e86\u53d7\u9650\u5236\u7684\u5185\u5bb9\uff1a{0}
 error.login.user_pwd_error=\u7528\u6237\u540d\u5bc6\u7801\u9519\u8bef
+error.need.select.one=\u8bf7\u9009\u62e9\u4e00\u4e2a\u6570\u636e
+error.cant.select.more.than.one=\u4e0d\u80fd\u9009\u62e9\u591a\u6761
