删掉了原来的ByteCount validate，改成SingleByte validate。 此提交，已经完整的实现了一个自定义的hibernate validate!!

--- a/src/main/resources/conf/messages.properties
+++ b/src/main/resources/conf/messages.properties
@@ -1,3 +1,5 @@
+com.etech.constraints.singlebyte=need be single byte
+
 menu.maintain=Base Information Maintain
 menu.maintain.empe_info=Employee Information
 menu.maintain.holiday_info=Holiday Information
