--- a/src/main/resources/conf/messages_zh_CN.properties
+++ b/src/main/resources/conf/messages_zh_CN.properties
@@ -1,3 +1,5 @@
+com.etech.constraints.singlebyte=\u9700\u8981single byte
+
 menu.maintain=\u57fa\u7840\u4fe1\u606f\u7ef4\u62a4
 menu.maintain.empe_info=\u5458\u5de5\u4fe1\u606f
 menu.maintain.holiday_info=\u5047\u65e5\u4fe1\u606f
