假日名维护做好了。需要改进error显示的css等。

--- a/src/main/resources/conf/messages.properties
+++ b/src/main/resources/conf/messages.properties
@@ -2,14 +2,22 @@ com.etech.constraints.singlebyte=need be single byte
 
 menu.maintain=Base Information Maintain
 menu.maintain.empe_info=Employee Information
+menu.maintain.holiday=Holiday
 menu.maintain.holiday_info=Holiday Information
 menu.maintain.attendance_status_info=Attendance Status Information
 menu.attendance=Attendance Information
 
 title.main=Main Menu
 title.maintain.atdnc_sts_list=Attendance Information Maintain
+title.maintain.atdnc_sts_info=Attendance Information
+title.maintain.hldy_list=Holiday Maintain
+title.maintain.hldy_info=Holiday Information
+
 
 page.header.atdnc_sts_list=Attendance Information Maintain
+page.header.atdnc_sts_info=Attendance Information
+page.header.hldy_list=Holiday Maintain
+page.header.hldy_info=Holiday Information
 
 label.system.name=Holiday Assistant
 label.login.empe_num=Employee Number
@@ -17,6 +25,7 @@ label.login.pwd=Password
 label.welcome=Welcome, 
 label.logout=Logout
 label.attendance.status.name=Attendance Status
+label.holiday.name=Holiday name
 
 button.login.login=Login
 button.login.reset=Reset
