--- a/src/main/resources/conf/messages_zh_CN.properties
+++ b/src/main/resources/conf/messages_zh_CN.properties
@@ -2,16 +2,22 @@ com.etech.constraints.singlebyte=\u9700\u8981single byte
 
 menu.maintain=\u57fa\u7840\u4fe1\u606f\u7ef4\u62a4
 menu.maintain.empe_info=\u5458\u5de5\u4fe1\u606f
+menu.maintain.holiday=\u5047\u65E5\u540D
 menu.maintain.holiday_info=\u5047\u65e5\u4fe1\u606f
 menu.maintain.attendance_status_info=\u51fa\u52e4\u72b6\u6001\u4fe1\u606f
-menu.attendance=\u51fa\u52e4\u4fe1\u606f
+menu.attendance=\u51fa\u52e4\u4fe1\u606f\
+
 
 title.main=\u4e3b\u83dc\u5355
 title.maintain.atdnc_sts_list=\u51fa\u52e4\u72b6\u6001\u7ef4\u62a4
 title.maintain.atdnc_sts_info=\u51fa\u52e4\u72b6\u6001
+title.maintain.hldy_list=\u5047\u65E5\u540D\u7EF4\u62A4
+title.maintain.hldy_info=\u5047\u65E5\u540D
 
 page.header.atdnc_sts_list=\u51fa\u52e4\u72b6\u6001\u7ef4\u62a4
 page.header.atdnc_sts_info=\u51fa\u52e4\u72b6\u6001
+page.header.hldy_list=\u5047\u65E5\u540D\u7EF4\u62A4
+page.header.hldy_info=\u5047\u65E5\u540D
 
 label.system.name=\u8282\u65e5\u5b89\u6392\u52a9\u624b
 label.login.empe_num=\u5458\u5de5\u53f7
@@ -19,6 +25,7 @@ label.login.pwd=\u767b\u5f55\u53e3\u4ee4
 label.welcome=\u6b22\u8fce\uff0c 
 label.logout=\u767b\u51fa 
 label.attendance.status.name=\u51fa\u52e4\u72b6\u6001
+label.holiday.name=\u8282\u65E5\u540D
 
 
 button.login.login=\u767b\u5f55
