完善了error消息和msg消息的显示方式。

--- a/src/main/resources/conf/messages.properties
+++ b/src/main/resources/conf/messages.properties
@@ -46,3 +46,5 @@ reserved.data=You input a reserved content :{0}
 error.login.user_pwd_error=EmpeNum or password is error.
 error.need.select.one=Please select one data.
 error.cant.select.more.than.one=You couldn't select more than one.
+
+msg.info.register.success=Register success.
