--- a/src/main/resources/conf/messages_zh_CN.properties
+++ b/src/main/resources/conf/messages_zh_CN.properties
@@ -47,3 +47,5 @@ reserved.data=\u4f60\u8f93\u5165\u4e86\u53d7\u9650\u5236\u7684\u5185\u5bb9\uff1a
 error.login.user_pwd_error=\u7528\u6237\u540d\u5bc6\u7801\u9519\u8bef
 error.need.select.one=\u8bf7\u9009\u62e9\u4e00\u4e2a\u6570\u636e
 error.cant.select.more.than.one=\u4e0d\u80fd\u9009\u62e9\u591a\u6761
+
+msg.info.register.success=\u4FDD\u5B58\u6210\u529F
