正在进行HolidayList的编写

--- a/src/main/resources/conf/messages.properties
+++ b/src/main/resources/conf/messages.properties
@@ -12,12 +12,15 @@ title.maintain.atdnc_sts_list=Attendance Information Maintain
 title.maintain.atdnc_sts_info=Attendance Information
 title.maintain.hldy_list=Holiday Maintain
 title.maintain.hldy_info=Holiday Information
-
+title.maintain.hldy_list_list=Holiday List Maintain
+title.maintain.hldy_list_info=Holiday List Information
 
 page.header.atdnc_sts_list=Attendance Information Maintain
 page.header.atdnc_sts_info=Attendance Information
 page.header.hldy_list=Holiday Maintain
 page.header.hldy_info=Holiday Information
+page.header.hldy_list_list=Holiday List Maintain
+page.header.hldy_list_info=Holiday List Information
 
 label.system.name=Holiday Assistant
 label.login.empe_num=Employee Number
@@ -26,6 +29,11 @@ label.welcome=Welcome,
 label.logout=Logout
 label.attendance.status.name=Attendance Status
 label.holiday.name=Holiday name
+label.year=Year
+label.holiday.name=Holiday
+label.holiday.start.end.date=Holiday Start/End Date 
+label.holiday.statistic.start.end.date=Statistic Start/End Date
+label.sign.wave=~
 
 button.login.login=Login
 button.login.reset=Reset
