--- a/src/main/resources/conf/messages_zh_CN.properties
+++ b/src/main/resources/conf/messages_zh_CN.properties
@@ -13,11 +13,15 @@ title.maintain.atdnc_sts_list=\u51fa\u52e4\u72b6\u6001\u7ef4\u62a4
 title.maintain.atdnc_sts_info=\u51fa\u52e4\u72b6\u6001
 title.maintain.hldy_list=\u5047\u65E5\u540D\u7EF4\u62A4
 title.maintain.hldy_info=\u5047\u65E5\u540D
+title.maintain.hldy_list_list=\u5047\u65E5\u5217\u8868\u7EF4\u62A4
+title.maintain.hldy_list_info=\u5047\u65E5\u5217\u8868\u4FE1\u606F
 
 page.header.atdnc_sts_list=\u51fa\u52e4\u72b6\u6001\u7ef4\u62a4
 page.header.atdnc_sts_info=\u51fa\u52e4\u72b6\u6001
 page.header.hldy_list=\u5047\u65E5\u540D\u7EF4\u62A4
 page.header.hldy_info=\u5047\u65E5\u540D
+page.header.hldy_list_list=\u5047\u65E5\u5217\u8868\u7EF4\u62A4
+page.header.hldy_list_info=\u5047\u65E5\u5217\u8868\u4FE1\u606F
 
 label.system.name=\u8282\u65e5\u5b89\u6392\u52a9\u624b
 label.login.empe_num=\u5458\u5de5\u53f7
@@ -26,6 +30,10 @@ label.welcome=\u6b22\u8fce\uff0c
 label.logout=\u767b\u51fa 
 label.attendance.status.name=\u51fa\u52e4\u72b6\u6001
 label.holiday.name=\u8282\u65E5\u540D
+label.year=\u5E74
+label.holiday.start.end.date=\u5047\u65E5\u8D77\u6B62\u65E5\u671F
+label.holiday.statistic.start.end.date=\u516C\u53F8\u7EDF\u8BA1\u8D77\u6B62\u65E5\u671F
+label.sign.wave=~
 
 
 button.login.login=\u767b\u5f55
