--- a/src/main/resources/conf/messages.properties
+++ b/src/main/resources/conf/messages.properties
@@ -37,6 +37,7 @@ label.sign.wave=~
 
 button.login.login=Login
 button.login.reset=Reset
+button.search=Search
 button.modify=Modify
 button.create=Create
 button.delete=Delete
