--- a/src/main/resources/conf/messages_zh_CN.properties
+++ b/src/main/resources/conf/messages_zh_CN.properties
@@ -2,7 +2,7 @@ com.etech.constraints.singlebyte=\u9700\u8981single byte
 
 menu.maintain=\u57fa\u7840\u4fe1\u606f\u7ef4\u62a4
 menu.maintain.empe_info=\u5458\u5de5\u4fe1\u606f
-menu.maintain.holiday=\u5047\u65E5\u540D
+menu.maintain.holiday=\u5047\u65e5\u540d
 menu.maintain.holiday_info=\u5047\u65e5\u4fe1\u606f
 menu.maintain.attendance_status_info=\u51fa\u52e4\u72b6\u6001\u4fe1\u606f
 menu.attendance=\u51fa\u52e4\u4fe1\u606f\
@@ -11,17 +11,17 @@ menu.attendance=\u51fa\u52e4\u4fe1\u606f\
 title.main=\u4e3b\u83dc\u5355
 title.maintain.atdnc_sts_list=\u51fa\u52e4\u72b6\u6001\u7ef4\u62a4
 title.maintain.atdnc_sts_info=\u51fa\u52e4\u72b6\u6001
-title.maintain.hldy_list=\u5047\u65E5\u540D\u7EF4\u62A4
-title.maintain.hldy_info=\u5047\u65E5\u540D
-title.maintain.hldy_list_list=\u5047\u65E5\u5217\u8868\u7EF4\u62A4
-title.maintain.hldy_list_info=\u5047\u65E5\u5217\u8868\u4FE1\u606F
+title.maintain.hldy_list=\u5047\u65e5\u540d\u7ef4\u62a4
+title.maintain.hldy_info=\u5047\u65e5\u540d
+title.maintain.hldy_list_list=\u5047\u65e5\u5217\u8868\u7ef4\u62a4
+title.maintain.hldy_list_info=\u5047\u65e5\u5217\u8868\u4fe1\u606f
 
 page.header.atdnc_sts_list=\u51fa\u52e4\u72b6\u6001\u7ef4\u62a4
 page.header.atdnc_sts_info=\u51fa\u52e4\u72b6\u6001
-page.header.hldy_list=\u5047\u65E5\u540D\u7EF4\u62A4
-page.header.hldy_info=\u5047\u65E5\u540D
-page.header.hldy_list_list=\u5047\u65E5\u5217\u8868\u7EF4\u62A4
-page.header.hldy_list_info=\u5047\u65E5\u5217\u8868\u4FE1\u606F
+page.header.hldy_list=\u5047\u65e5\u540d\u7ef4\u62a4
+page.header.hldy_info=\u5047\u65e5\u540d
+page.header.hldy_list_list=\u5047\u65e5\u5217\u8868\u7ef4\u62a4
+page.header.hldy_list_info=\u5047\u65e5\u5217\u8868\u4fe1\u606f
 
 label.system.name=\u8282\u65e5\u5b89\u6392\u52a9\u624b
 label.login.empe_num=\u5458\u5de5\u53f7
@@ -29,15 +29,16 @@ label.login.pwd=\u767b\u5f55\u53e3\u4ee4
 label.welcome=\u6b22\u8fce\uff0c 
 label.logout=\u767b\u51fa 
 label.attendance.status.name=\u51fa\u52e4\u72b6\u6001
-label.holiday.name=\u8282\u65E5\u540D
-label.year=\u5E74
-label.holiday.start.end.date=\u5047\u65E5\u8D77\u6B62\u65E5\u671F
-label.holiday.statistic.start.end.date=\u516C\u53F8\u7EDF\u8BA1\u8D77\u6B62\u65E5\u671F
+label.holiday.name=\u8282\u65e5\u540d
+label.year=\u5e74
+label.holiday.start.end.date=\u5047\u65e5\u8d77\u6b62\u65e5\u671f
+label.holiday.statistic.start.end.date=\u516c\u53f8\u7edf\u8ba1\u8d77\u6b62\u65e5\u671f
 label.sign.wave=~
 
 
 button.login.login=\u767b\u5f55
 button.login.reset=\u91cd\u7f6e
+button.search=\u67e5\u8be2
 button.modify=\u4fee\u6539
 button.create=\u65b0\u589e
 button.delete=\u5220\u9664
@@ -56,4 +57,4 @@ error.login.user_pwd_error=\u7528\u6237\u540d\u5bc6\u7801\u9519\u8bef
 error.need.select.one=\u8bf7\u9009\u62e9\u4e00\u4e2a\u6570\u636e
 error.cant.select.more.than.one=\u4e0d\u80fd\u9009\u62e9\u591a\u6761
 
-msg.info.register.success=\u4FDD\u5B58\u6210\u529F
+msg.info.register.success=\u4fdd\u5b58\u6210\u529f
