--- a/src/main/resources/conf/messages_zh_CN.properties
+++ b/src/main/resources/conf/messages_zh_CN.properties
@@ -32,7 +32,14 @@ label.attendance.status.name=\u51fa\u52e4\u72b6\u6001
 label.holiday.name=\u8282\u65e5\u540d
 label.year=\u5e74
 label.holiday.start.end.date=\u5047\u65e5\u8d77\u6b62\u65e5\u671f
+label.holiday.start.date=\u5047\u65E5\u5F00\u59CB\u65E5\u671F
+label.holiday.end.date=\u5047\u65E5\u7ED3\u675F\u65E5\u671F
 label.holiday.statistic.start.end.date=\u516c\u53f8\u7edf\u8ba1\u8d77\u6b62\u65e5\u671f
+label.holiday.statistic.start.date=\u516C\u53F8\u7EDF\u8BA1\u5F00\u59CB\u65E5\u671F
+label.holiday.statistic.end.date=\u516C\u53F8\u7EDF\u8BA1\u7ED3\u675F\u65E5\u671F
+label.initial.flag=\u521D\u59CB\u5316
+label.initialized=\u5DF2\u521D\u59CB\u5316
+label.uninitialized=\u672A\u521D\u59CB\u5316
 label.sign.wave=~
 
 
