调整了tiles，将标题放到baseLayout.jsp中了。

--- a/src/main/resources/conf/messages.properties
+++ b/src/main/resources/conf/messages.properties
@@ -15,12 +15,12 @@ title.maintain.hldy_info=Holiday Information
 title.maintain.hldy_list_list=Holiday List Maintain
 title.maintain.hldy_list_info=Holiday List Information
 
-page.header.atdnc_sts_list=Attendance Information Maintain
-page.header.atdnc_sts_info=Attendance Information
-page.header.hldy_list=Holiday Maintain
-page.header.hldy_info=Holiday Information
-page.header.hldy_list_list=Holiday List Maintain
-page.header.hldy_list_info=Holiday List Information
+#page.header.atdnc_sts_list=Attendance Information Maintain
+#page.header.atdnc_sts_info=Attendance Information
+#page.header.hldy_list=Holiday Maintain
+#page.header.hldy_info=Holiday Information
+#page.header.hldy_list_list=Holiday List Maintain
+#page.header.hldy_list_info=Holiday List Information
 
 label.system.name=Holiday Assistant
 label.login.empe_num=Employee Number
