--- a/src/main/resources/conf/messages_zh_CN.properties
+++ b/src/main/resources/conf/messages_zh_CN.properties
@@ -16,12 +16,12 @@ title.maintain.hldy_info=\u5047\u65e5\u540d
 title.maintain.hldy_list_list=\u5047\u65e5\u5217\u8868\u7ef4\u62a4
 title.maintain.hldy_list_info=\u5047\u65e5\u5217\u8868\u4fe1\u606f
 
-page.header.atdnc_sts_list=\u51fa\u52e4\u72b6\u6001\u7ef4\u62a4
-page.header.atdnc_sts_info=\u51fa\u52e4\u72b6\u6001
-page.header.hldy_list=\u5047\u65e5\u540d\u7ef4\u62a4
+#page.header.atdnc_sts_list=\u51fa\u52e4\u72b6\u6001\u7ef4\u62a4
+#page.header.atdnc_sts_info=\u51fa\u52e4\u72b6\u6001
+#page.header.hldy_list=\u5047\u65e5\u540d\u7ef4\u62a4
 page.header.hldy_info=\u5047\u65e5\u540d
-page.header.hldy_list_list=\u5047\u65e5\u5217\u8868\u7ef4\u62a4
-page.header.hldy_list_info=\u5047\u65e5\u5217\u8868\u4fe1\u606f
+#page.header.hldy_list_list=\u5047\u65e5\u5217\u8868\u7ef4\u62a4
+#page.header.hldy_list_info=\u5047\u65e5\u5217\u8868\u4fe1\u606f
 
 label.system.name=\u8282\u65e5\u5b89\u6392\u52a9\u624b
 label.login.empe_num=\u5458\u5de5\u53f7
@@ -32,14 +32,14 @@ label.attendance.status.name=\u51fa\u52e4\u72b6\u6001
 label.holiday.name=\u8282\u65e5\u540d
 label.year=\u5e74
 label.holiday.start.end.date=\u5047\u65e5\u8d77\u6b62\u65e5\u671f
-label.holiday.start.date=\u5047\u65E5\u5F00\u59CB\u65E5\u671F
-label.holiday.end.date=\u5047\u65E5\u7ED3\u675F\u65E5\u671F
+label.holiday.start.date=\u5047\u65e5\u5f00\u59cb\u65e5\u671f
+label.holiday.end.date=\u5047\u65e5\u7ed3\u675f\u65e5\u671f
 label.holiday.statistic.start.end.date=\u516c\u53f8\u7edf\u8ba1\u8d77\u6b62\u65e5\u671f
-label.holiday.statistic.start.date=\u516C\u53F8\u7EDF\u8BA1\u5F00\u59CB\u65E5\u671F
-label.holiday.statistic.end.date=\u516C\u53F8\u7EDF\u8BA1\u7ED3\u675F\u65E5\u671F
-label.initial.flag=\u521D\u59CB\u5316
-label.initialized=\u5DF2\u521D\u59CB\u5316
-label.uninitialized=\u672A\u521D\u59CB\u5316
+label.holiday.statistic.start.date=\u516c\u53f8\u7edf\u8ba1\u5f00\u59cb\u65e5\u671f
+label.holiday.statistic.end.date=\u516c\u53f8\u7edf\u8ba1\u7ed3\u675f\u65e5\u671f
+label.initial.flag=\u521d\u59cb\u5316
+label.initialized=\u5df2\u521d\u59cb\u5316
+label.uninitialized=\u672a\u521d\u59cb\u5316
 label.sign.wave=~
 
 
