假日列表信息页面

--- a/src/main/resources/conf/messages.properties
+++ b/src/main/resources/conf/messages.properties
@@ -50,6 +50,8 @@ button.create=Create
 button.delete=Delete
 button.register=Save
 button.back=Back
+button.line.add=Line Add
+button.line.delete=Line Delete
 
 NotEmpty.user.empe_num=Empe num can't be empty.
 #Length.user.empe_num=Length must be between {0} and {1}
@@ -57,6 +59,7 @@ NotEmpty.user.pwd=Password can't be empty.
 #Length.user.pwd=Length must be between {0} and {1}
 NotEmpty=may not be empty.
 error.length=Length must be between {min} and {max}
+error.not.be.null=may not be null
 reserved.user.empe_num=reserved empe num
 reserved.data=You input a reserved content :{0}
 error.login.user_pwd_error=EmpeNum or password is error.
