--- a/src/main/resources/conf/messages_zh_CN.properties
+++ b/src/main/resources/conf/messages_zh_CN.properties
@@ -51,6 +51,8 @@ button.create=\u65b0\u589e
 button.delete=\u5220\u9664
 button.register=\u4fdd\u5b58
 button.back=\u8fd4\u56de
+button.line.add=\u63D2\u5165\u884C
+button.line.delete=\u5220\u9664\u884C
 
 NotEmpty.user.empe_num=\u8bf7\u8f93\u5165\u5458\u5de5\u53f7
 #Length.user.empe_num=\u957f\u5ea6\u5fc5\u987b\u5728{min}\u4e0e{1}\u4e4b\u95f4
@@ -58,6 +60,7 @@ NotEmpty.user.pwd=\u8bf7\u8f93\u5165\u767b\u5f55\u53e3\u4ee4
 #Length.user.pwd=\u957f\u5ea6\u5fc5\u987b\u5728{0}\u4e0e{1}\u4e4b\u95f4
 NotEmpty=\u4e0d\u53ef\u4e3a\u7a7a
 error.length=\u5185\u5bb9\u957f\u5ea6\u5fc5\u987b\u5728{min}\u4e0e{max}\u4e4b\u95f4
+error.not.be.null=\u4E0D\u80FD\u4E3A\u7A7A
 reserved.user.empe_num=\u53d7\u9650\u5236\u7684\u7528\u6237\u540d
 reserved.data=\u4f60\u8f93\u5165\u4e86\u53d7\u9650\u5236\u7684\u5185\u5bb9\uff1a{0}
 error.login.user_pwd_error=\u7528\u6237\u540d\u5bc6\u7801\u9519\u8bef
