--- a/src/main/resources/conf/messages.properties
+++ b/src/main/resources/conf/messages.properties
@@ -65,5 +65,9 @@ reserved.data=You input a reserved content :{0}
 error.login.user_pwd_error=EmpeNum or password is error.
 error.need.select.one=Please select one data.
 error.cant.select.more.than.one=You couldn't select more than one.
+error.date.relation=The date's relation is error.
+error.holiday.start.date.with.start.date=Holiday start date can't smaller than Statistic start date.
+error.holiday.end.date.with.end.date=Holiday end date can't bigger than Statistic end date.
+error.holiday.doublication=Holiday is doublication.
 
 msg.info.register.success=Register success.
