--- a/src/main/resources/conf/messages_zh_CN.properties
+++ b/src/main/resources/conf/messages_zh_CN.properties
@@ -66,5 +66,9 @@ reserved.data=\u4f60\u8f93\u5165\u4e86\u53d7\u9650\u5236\u7684\u5185\u5bb9\uff1a
 error.login.user_pwd_error=\u7528\u6237\u540d\u5bc6\u7801\u9519\u8bef
 error.need.select.one=\u8bf7\u9009\u62e9\u4e00\u4e2a\u6570\u636e
 error.cant.select.more.than.one=\u4e0d\u80fd\u9009\u62e9\u591a\u6761
+error.date.relation=\u65E5\u671F\u5173\u7CFB\u9519\u8BEF
+error.holiday.start.date.with.start.date=\u5047\u65E5\u8D77\u59CB\u65E5\u671F\u4E0D\u80FD\u5C0F\u4E8E\u7EDF\u8BA1\u8D77\u59CB\u65E5\u671F
+error.holiday.end.date.with.end.date=\u5047\u65E5\u7ED3\u675F\u65E5\u671F\u4E0D\u80FD\u5927\u4E8E\u7EDF\u8BA1\u7ED3\u675F\u65E5\u671F
+error.holiday.doublication=\u6709\u91CD\u5408\u5047\u65E5
 
 msg.info.register.success=\u4fdd\u5b58\u6210\u529f
