自定义数据parse/format消息的例子：[typeMismatch.command.id,typeMismatch.id,typeMismatch.java.lang.Long,typeMismatch]
需要继续了解其他的例子!

--- a/src/main/resources/conf/messages.properties
+++ b/src/main/resources/conf/messages.properties
@@ -27,7 +27,11 @@ label.login.empe_num=Employee Number
 label.login.pwd=Password
 label.welcome=Welcome, 
 label.logout=Logout
+label.id=Id
 label.attendance.status.name=Attendance Status
+label.in.shanghai=In Shanghai?
+label.yes=Yes
+label.no=No
 label.holiday.name=Holiday name
 label.year=Year
 label.holiday.name=Holiday
@@ -53,6 +57,7 @@ button.back=Back
 button.line.add=Line Add
 button.line.delete=Line Delete
 
+typeMismatch.java.lang.Long=Please input Long data type.
 NotEmpty.user.empe_num=Empe num can't be empty.
 #Length.user.empe_num=Length must be between {0} and {1}
 NotEmpty.user.pwd=Password can't be empty.
