--- a/src/main/resources/conf/messages_zh_CN.properties
+++ b/src/main/resources/conf/messages_zh_CN.properties
@@ -28,7 +28,11 @@ label.login.empe_num=\u5458\u5de5\u53f7
 label.login.pwd=\u767b\u5f55\u53e3\u4ee4
 label.welcome=\u6b22\u8fce\uff0c 
 label.logout=\u767b\u51fa 
+label.id=Id
 label.attendance.status.name=\u51fa\u52e4\u72b6\u6001
+label.in.shanghai=\u662F\u5426\u5728\u6CAA
+label.yes=\u662F
+label.no=\u5426
 label.holiday.name=\u8282\u65e5\u540d
 label.year=\u5e74
 label.holiday.start.end.date=\u5047\u65e5\u8d77\u6b62\u65e5\u671f
@@ -54,6 +58,7 @@ button.back=\u8fd4\u56de
 button.line.add=\u63D2\u5165\u884C
 button.line.delete=\u5220\u9664\u884C
 
+typeMismatch.java.lang.Long=\u8BF7\u8F93\u5165\u957F\u6574\u578B\u6570\u636E
 NotEmpty.user.empe_num=\u8bf7\u8f93\u5165\u5458\u5de5\u53f7
 #Length.user.empe_num=\u957f\u5ea6\u5fc5\u987b\u5728{min}\u4e0e{1}\u4e4b\u95f4
 NotEmpty.user.pwd=\u8bf7\u8f93\u5165\u767b\u5f55\u53e3\u4ee4
