t_holiday_list删除记录，相关的表数据删除的程序

--- a/src/main/resources/conf/messages.properties
+++ b/src/main/resources/conf/messages.properties
@@ -53,6 +53,7 @@ button.modify=Modify
 button.create=Create
 button.delete=Delete
 button.register=Save
+button.initialize=Initialize Attendance Info
 button.back=Back
 button.line.add=Line Add
 button.line.delete=Line Delete
