--- a/src/main/resources/conf/messages_zh_CN.properties
+++ b/src/main/resources/conf/messages_zh_CN.properties
@@ -54,6 +54,7 @@ button.modify=\u4fee\u6539
 button.create=\u65b0\u589e
 button.delete=\u5220\u9664
 button.register=\u4fdd\u5b58
+button.initialize=\u521D\u59CB\u5316\u51FA\u52E4\u4FE1\u606F
 button.back=\u8fd4\u56de
 button.line.add=\u63D2\u5165\u884C
 button.line.delete=\u5220\u9664\u884C
