用户列表查询功能

--- a/src/main/resources/conf/messages.properties
+++ b/src/main/resources/conf/messages.properties
@@ -1,7 +1,7 @@
 com.etech.constraints.singlebyte=need be single byte
 
 menu.maintain=Base Information Maintain
-menu.maintain.empe_info=Employee Information
+menu.maintain.user_list=User Information
 menu.maintain.holiday=Holiday
 menu.maintain.holiday_info=Holiday Information
 menu.maintain.attendance_status_info=Attendance Status Information
@@ -14,6 +14,7 @@ title.maintain.hldy_list=Holiday Maintain
 title.maintain.hldy_info=Holiday Information
 title.maintain.hldy_list_list=Holiday List Maintain
 title.maintain.hldy_list_info=Holiday List Information
+title.maintain.user_list=User Info List
 
 #page.header.atdnc_sts_list=Attendance Information Maintain
 #page.header.atdnc_sts_info=Attendance Information
@@ -45,6 +46,12 @@ label.initial.flag=Initialization Flag
 label.initialized=Initialized
 label.uninitialized=Uninitialized
 label.sign.wave=~
+label.empe.name=Employee Name
+label.pwd=Password
+label.mobile=Mobile
+label.tel_no=Tel NO.
+label.email=Email
+label.dflt_atndnc_sts_id=Default Attendance Status
 
 button.login.login=Login
 button.login.reset=Reset
@@ -64,6 +71,7 @@ NotEmpty.user.empe_num=Empe num can't be empty.
 NotEmpty.user.pwd=Password can't be empty.
 #Length.user.pwd=Length must be between {0} and {1}
 NotEmpty=may not be empty.
+Email.java.lang.String=Email error.
 error.length=Length must be between {min} and {max}
 error.not.be.null=may not be null
 reserved.user.empe_num=reserved empe num
@@ -75,5 +83,6 @@ error.date.relation=The date's relation is error.
 error.holiday.start.date.with.start.date=Holiday start date can't smaller than Statistic start date.
 error.holiday.end.date.with.end.date=Holiday end date can't bigger than Statistic end date.
 error.holiday.doublication=Holiday is doublication.
+error.data.is.not.exist=Data is not exist.
 
 msg.info.register.success=Register success.
