--- a/src/main/resources/conf/messages_zh_CN.properties
+++ b/src/main/resources/conf/messages_zh_CN.properties
@@ -1,7 +1,7 @@
 com.etech.constraints.singlebyte=\u9700\u8981single byte
 
 menu.maintain=\u57fa\u7840\u4fe1\u606f\u7ef4\u62a4
-menu.maintain.empe_info=\u5458\u5de5\u4fe1\u606f
+menu.maintain.user_list=\u5458\u5de5\u4fe1\u606f
 menu.maintain.holiday=\u5047\u65e5\u540d
 menu.maintain.holiday_info=\u5047\u65e5\u4fe1\u606f
 menu.maintain.attendance_status_info=\u51fa\u52e4\u72b6\u6001\u4fe1\u606f
@@ -15,6 +15,7 @@ title.maintain.hldy_list=\u5047\u65e5\u540d\u7ef4\u62a4
 title.maintain.hldy_info=\u5047\u65e5\u540d
 title.maintain.hldy_list_list=\u5047\u65e5\u5217\u8868\u7ef4\u62a4
 title.maintain.hldy_list_info=\u5047\u65e5\u5217\u8868\u4fe1\u606f
+title.maintain.user_list=\u7528\u6237\u4FE1\u606F\u5217\u8868
 
 #page.header.atdnc_sts_list=\u51fa\u52e4\u72b6\u6001\u7ef4\u62a4
 #page.header.atdnc_sts_info=\u51fa\u52e4\u72b6\u6001
@@ -45,7 +46,12 @@ label.initial.flag=\u521d\u59cb\u5316
 label.initialized=\u5df2\u521d\u59cb\u5316
 label.uninitialized=\u672a\u521d\u59cb\u5316
 label.sign.wave=~
-
+label.empe.name=\u59D3\u540D
+label.pwd=Password
+label.mobile=\u624B\u673A\u53F7
+label.tel_no=\u56FA\u5B9A\u7535\u8BDD
+label.email=Email
+label.dflt_atndnc_sts_id=\u5047\u65E5\u9ED8\u8BA4\u72B6\u6001
 
 button.login.login=\u767b\u5f55
 button.login.reset=\u91cd\u7f6e
@@ -65,6 +71,7 @@ NotEmpty.user.empe_num=\u8bf7\u8f93\u5165\u5458\u5de5\u53f7
 NotEmpty.user.pwd=\u8bf7\u8f93\u5165\u767b\u5f55\u53e3\u4ee4
 #Length.user.pwd=\u957f\u5ea6\u5fc5\u987b\u5728{0}\u4e0e{1}\u4e4b\u95f4
 NotEmpty=\u4e0d\u53ef\u4e3a\u7a7a
+Email.java.lang.String=Email\u683C\u5F0F\u9519\u8BEF
 error.length=\u5185\u5bb9\u957f\u5ea6\u5fc5\u987b\u5728{min}\u4e0e{max}\u4e4b\u95f4
 error.not.be.null=\u4E0D\u80FD\u4E3A\u7A7A
 reserved.user.empe_num=\u53d7\u9650\u5236\u7684\u7528\u6237\u540d
@@ -76,5 +83,6 @@ error.date.relation=\u65E5\u671F\u5173\u7CFB\u9519\u8BEF
 error.holiday.start.date.with.start.date=\u5047\u65E5\u8D77\u59CB\u65E5\u671F\u4E0D\u80FD\u5C0F\u4E8E\u7EDF\u8BA1\u8D77\u59CB\u65E5\u671F
 error.holiday.end.date.with.end.date=\u5047\u65E5\u7ED3\u675F\u65E5\u671F\u4E0D\u80FD\u5927\u4E8E\u7EDF\u8BA1\u7ED3\u675F\u65E5\u671F
 error.holiday.doublication=\u6709\u91CD\u5408\u5047\u65E5
+error.data.is.not.exist=\u6570\u636E\u4E0D\u5B58\u5728
 
 msg.info.register.success=\u4fdd\u5b58\u6210\u529f
