用户信息维护功能

--- a/src/main/resources/conf/messages.properties
+++ b/src/main/resources/conf/messages.properties
@@ -15,6 +15,7 @@ title.maintain.hldy_info=Holiday Information
 title.maintain.hldy_list_list=Holiday List Maintain
 title.maintain.hldy_list_info=Holiday List Information
 title.maintain.user_list=User Info List
+title.maintain.user_info=User Info
 
 #page.header.atdnc_sts_list=Attendance Information Maintain
 #page.header.atdnc_sts_info=Attendance Information
@@ -53,6 +54,9 @@ label.tel_no=Tel NO.
 label.email=Email
 label.dflt_atndnc_sts_id=Default Attendance Status
 
+option.in.shanghai=In ShangHai
+option.not.in.shanghai=Not in ShangHai
+
 button.login.login=Login
 button.login.reset=Reset
 button.search=Search
@@ -84,5 +88,6 @@ error.holiday.start.date.with.start.date=Holiday start date can't smaller than S
 error.holiday.end.date.with.end.date=Holiday end date can't bigger than Statistic end date.
 error.holiday.doublication=Holiday is doublication.
 error.data.is.not.exist=Data is not exist.
+error.data.is.exist.already=Data is exist already.
 
 msg.info.register.success=Register success.
