--- a/src/main/resources/conf/messages_zh_CN.properties
+++ b/src/main/resources/conf/messages_zh_CN.properties
@@ -16,6 +16,7 @@ title.maintain.hldy_info=\u5047\u65e5\u540d
 title.maintain.hldy_list_list=\u5047\u65e5\u5217\u8868\u7ef4\u62a4
 title.maintain.hldy_list_info=\u5047\u65e5\u5217\u8868\u4fe1\u606f
 title.maintain.user_list=\u7528\u6237\u4FE1\u606F\u5217\u8868
+title.maintain.user_info=\u7528\u6237\u4FE1\u606F
 
 #page.header.atdnc_sts_list=\u51fa\u52e4\u72b6\u6001\u7ef4\u62a4
 #page.header.atdnc_sts_info=\u51fa\u52e4\u72b6\u6001
@@ -53,6 +54,9 @@ label.tel_no=\u56FA\u5B9A\u7535\u8BDD
 label.email=Email
 label.dflt_atndnc_sts_id=\u5047\u65E5\u9ED8\u8BA4\u72B6\u6001
 
+option.in.shanghai=\u5728\u6CAA
+option.not.in.shanghai=\u79BB\u6CAA
+
 button.login.login=\u767b\u5f55
 button.login.reset=\u91cd\u7f6e
 button.search=\u67e5\u8be2
@@ -84,5 +88,6 @@ error.holiday.start.date.with.start.date=\u5047\u65E5\u8D77\u59CB\u65E5\u671F\u4
 error.holiday.end.date.with.end.date=\u5047\u65E5\u7ED3\u675F\u65E5\u671F\u4E0D\u80FD\u5927\u4E8E\u7EDF\u8BA1\u7ED3\u675F\u65E5\u671F
 error.holiday.doublication=\u6709\u91CD\u5408\u5047\u65E5
 error.data.is.not.exist=\u6570\u636E\u4E0D\u5B58\u5728
+error.data.is.exist.already=\u6570\u636E\u5DF2\u7ECF\u5B58\u5728\u4E86
 
 msg.info.register.success=\u4fdd\u5b58\u6210\u529f
