用户信息功能继续完善，并增加了密码重置功能（未完成）

--- a/src/main/resources/conf/messages.properties
+++ b/src/main/resources/conf/messages.properties
@@ -16,6 +16,7 @@ title.maintain.hldy_list_list=Holiday List Maintain
 title.maintain.hldy_list_info=Holiday List Information
 title.maintain.user_list=User Info List
 title.maintain.user_info=User Info
+title.maintain.pwd_info=Password Reset
 
 #page.header.atdnc_sts_list=Attendance Information Maintain
 #page.header.atdnc_sts_info=Attendance Information
@@ -48,11 +49,16 @@ label.initialized=Initialized
 label.uninitialized=Uninitialized
 label.sign.wave=~
 label.empe.name=Employee Name
+label.group.name=Group Name
 label.pwd=Password
 label.mobile=Mobile
 label.tel_no=Tel NO.
 label.email=Email
 label.dflt_atndnc_sts_id=Default Attendance Status
+label.old.password=Old Password
+label.new.password=New Password
+label.new.password.again=New Password Again
+
 
 option.in.shanghai=In ShangHai
 option.not.in.shanghai=Not in ShangHai
@@ -65,6 +71,7 @@ button.create=Create
 button.delete=Delete
 button.register=Save
 button.initialize=Initialize Attendance Info
+button.reset.pwd=Reset Password
 button.back=Back
 button.line.add=Line Add
 button.line.delete=Line Delete
