--- a/src/main/resources/conf/messages_zh_CN.properties
+++ b/src/main/resources/conf/messages_zh_CN.properties
@@ -17,6 +17,7 @@ title.maintain.hldy_list_list=\u5047\u65e5\u5217\u8868\u7ef4\u62a4
 title.maintain.hldy_list_info=\u5047\u65e5\u5217\u8868\u4fe1\u606f
 title.maintain.user_list=\u7528\u6237\u4FE1\u606F\u5217\u8868
 title.maintain.user_info=\u7528\u6237\u4FE1\u606F
+title.maintain.pwd_info=\u5BC6\u7801\u91CD\u7F6E
 
 #page.header.atdnc_sts_list=\u51fa\u52e4\u72b6\u6001\u7ef4\u62a4
 #page.header.atdnc_sts_info=\u51fa\u52e4\u72b6\u6001
@@ -48,11 +49,16 @@ label.initialized=\u5df2\u521d\u59cb\u5316
 label.uninitialized=\u672a\u521d\u59cb\u5316
 label.sign.wave=~
 label.empe.name=\u59D3\u540D
+label.group.name=\u8BFE
 label.pwd=Password
 label.mobile=\u624B\u673A\u53F7
 label.tel_no=\u56FA\u5B9A\u7535\u8BDD
 label.email=Email
 label.dflt_atndnc_sts_id=\u5047\u65E5\u9ED8\u8BA4\u72B6\u6001
+label.old.password=\u65E7\u53E3\u4EE4
+label.new.password=\u65B0\u53E3\u4EE4
+label.new.password.again=\u91CD\u590D\u65B0\u53E3\u4EE4
+
 
 option.in.shanghai=\u5728\u6CAA
 option.not.in.shanghai=\u79BB\u6CAA
@@ -65,6 +71,7 @@ button.create=\u65b0\u589e
 button.delete=\u5220\u9664
 button.register=\u4fdd\u5b58
 button.initialize=\u521D\u59CB\u5316\u51FA\u52E4\u4FE1\u606F
+button.reset.pwd=\u91CD\u7F6E\u5BC6\u7801
 button.back=\u8fd4\u56de
 button.line.add=\u63D2\u5165\u884C
 button.line.delete=\u5220\u9664\u884C
