登录口令修改功能完成。 同时，也增加了类似struts中Baseaction的功能（这次是forward，和上次的redirect又不一样）。具体例子在UserListController中那个show4Post方法。

--- a/src/main/resources/conf/messages.properties
+++ b/src/main/resources/conf/messages.properties
@@ -96,5 +96,7 @@ error.holiday.end.date.with.end.date=Holiday end date can't bigger than Statisti
 error.holiday.doublication=Holiday is doublication.
 error.data.is.not.exist=Data is not exist.
 error.data.is.exist.already=Data is exist already.
+error.not.equal.old.password=Not equal to old password.
+error.new.password.not.equal=New passwords are not equal.
 
 msg.info.register.success=Register success.
