--- a/src/main/resources/conf/messages_zh_CN.properties
+++ b/src/main/resources/conf/messages_zh_CN.properties
@@ -96,5 +96,7 @@ error.holiday.end.date.with.end.date=\u5047\u65E5\u7ED3\u675F\u65E5\u671F\u4E0D\
 error.holiday.doublication=\u6709\u91CD\u5408\u5047\u65E5
 error.data.is.not.exist=\u6570\u636E\u4E0D\u5B58\u5728
 error.data.is.exist.already=\u6570\u636E\u5DF2\u7ECF\u5B58\u5728\u4E86
+error.not.equal.old.password=\u4E0E\u65E7\u53E3\u4EE4\u4E0D\u4E00\u81F4
+error.new.password.not.equal=\u65B0\u53E3\u4EE4\u4E0D\u76F8\u540C
 
 msg.info.register.success=\u4fdd\u5b58\u6210\u529f
