t_holiday中增加了一个排序字段(order_no)，用于下拉列表中的节假日名排序。 并修改了相关程序。

--- a/src/main/resources/conf/messages.properties
+++ b/src/main/resources/conf/messages.properties
@@ -38,6 +38,7 @@ label.no=No
 label.holiday.name=Holiday name
 label.year=Year
 label.holiday.name=Holiday
+label.holiday.order_no=Order No
 label.holiday.start.end.date=Holiday Start/End Date
 label.holiday.start.date=Holiday Start Date
 label.holiday.end.date=Holiday End Date
@@ -82,9 +83,11 @@ NotEmpty.user.empe_num=Empe num can't be empty.
 NotEmpty.user.pwd=Password can't be empty.
 #Length.user.pwd=Length must be between {0} and {1}
 NotEmpty=may not be empty.
+NotNull=may not be null.
 Email.java.lang.String=Email error.
 error.length=Length must be between {min} and {max}
 error.not.be.null=may not be null
+error.min=can't less than {value}
 reserved.user.empe_num=reserved empe num
 reserved.data=You input a reserved content :{0}
 error.login.user_pwd_error=EmpeNum or password is error.
