--- a/src/main/resources/conf/messages_zh_CN.properties
+++ b/src/main/resources/conf/messages_zh_CN.properties
@@ -37,6 +37,7 @@ label.in.shanghai=\u662F\u5426\u5728\u6CAA
 label.yes=\u662F
 label.no=\u5426
 label.holiday.name=\u8282\u65e5\u540d
+label.holiday.order_no=\u6392\u5e8f\u7f16\u53f7
 label.year=\u5e74
 label.holiday.start.end.date=\u5047\u65e5\u8d77\u6b62\u65e5\u671f
 label.holiday.start.date=\u5047\u65e5\u5f00\u59cb\u65e5\u671f
@@ -82,9 +83,11 @@ NotEmpty.user.empe_num=\u8bf7\u8f93\u5165\u5458\u5de5\u53f7
 NotEmpty.user.pwd=\u8bf7\u8f93\u5165\u767b\u5f55\u53e3\u4ee4
 #Length.user.pwd=\u957f\u5ea6\u5fc5\u987b\u5728{0}\u4e0e{1}\u4e4b\u95f4
 NotEmpty=\u4e0d\u53ef\u4e3a\u7a7a
+NotNull=\u4e0d\u53ef\u4e3anull
 Email.java.lang.String=Email\u683C\u5F0F\u9519\u8BEF
 error.length=\u5185\u5bb9\u957f\u5ea6\u5fc5\u987b\u5728{min}\u4e0e{max}\u4e4b\u95f4
 error.not.be.null=\u4E0D\u80FD\u4E3A\u7A7A
+error.min=\u4e0d\u53ef\u5c0f\u4e8e{value}
 reserved.user.empe_num=\u53d7\u9650\u5236\u7684\u7528\u6237\u540d
 reserved.data=\u4f60\u8f93\u5165\u4e86\u53d7\u9650\u5236\u7684\u5185\u5bb9\uff1a{0}
 error.login.user_pwd_error=\u7528\u6237\u540d\u5bc6\u7801\u9519\u8bef
