初始化出勤【想用cmd方式，不过会有single对象中注入prototype对象的典型问题，需要进一步考虑做法】

--- a/src/main/resources/conf/messages.properties
+++ b/src/main/resources/conf/messages.properties
@@ -103,3 +103,4 @@ error.not.equal.old.password=Not equal to old password.
 error.new.password.not.equal=New passwords are not equal.
 
 msg.info.register.success=Register success.
+msg.info.init.success=Initial success.
