--- a/src/main/resources/conf/messages_zh_CN.properties
+++ b/src/main/resources/conf/messages_zh_CN.properties
@@ -103,3 +103,4 @@ error.not.equal.old.password=\u4E0E\u65E7\u53E3\u4EE4\u4E0D\u4E00\u81F4
 error.new.password.not.equal=\u65B0\u53E3\u4EE4\u4E0D\u76F8\u540C
 
 msg.info.register.success=\u4fdd\u5b58\u6210\u529f
+msg.info.init.success=\u521d\u59cb\u5316\u6210\u529f
